tests/paczka1/small_fuzzy/96059284.err
Error in line 11: EJZIKGCJ S75 63,3
Error in line 12: EJZIKGCJ A323 51,6
